<resources>
    <string name="app_name">cs414Final</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Current</string>
    <string name="menu_gallery">Hourly</string>
    <string name="menu_slideshow">7 Day</string>
    <string name="nav_header_title_custom">Weather App</string>
    <string name="nav_header_subtitle_custom">Select Time</string>
    <string name="currentTemp">default</string>
    <string name="celsius">°C</string>
    <string name="latitude">default</string>
    <string name="latitudeLabel">Latitude:</string>
    <string name="longitude">default</string>
    <string name="timeCurrent">default</string>
    <string name="timezone">default</string>
    <string name="longitudeLabel">Longitude:</string>
    <string name="windspeed">default</string>
    <string name="winddirection">default</string>
    <string name="WSLabel">Windspeed:</string>
    <string name="WDLabel">Direction:</string>
    <string name="hourlyTimeLabel">TIME:</string>
    <string name="hourlyTempLabel">TEMPERATURE:</string>
    <string name="hourlyTempValue">0</string>
    <string name="hourlyTimeValue">default</string>

    <string name="time000">default</string>
    <string name="time100">default</string>
    <string name="time200">default</string>
    <string name="time300">default</string>
    <string name="time400">default</string>
    <string name="time500">default</string>
    <string name="time600">default</string>
    <string name="time700">default</string>
    <string name="time800">default</string>
    <string name="time900">default</string>
    <string name="time1000">default</string>
    <string name="time1100">default</string>
    <string name="time1200">default</string>
    <string name="time1300">default</string>
    <string name="time1400">default</string>
    <string name="time1500">default</string>
    <string name="time1600">default</string>
    <string name="time1700">default</string>
    <string name="time1800">default</string>
    <string name="time1900">default</string>
    <string name="time2000">default</string>
    <string name="time2100">default</string>
    <string name="time2200">default</string>
    <string name="time2300">default</string>

    <string name="temp000">default</string>
    <string name="temp100">default</string>
    <string name="temp200">default</string>
    <string name="temp300">default</string>
    <string name="temp400">default</string>
    <string name="temp500">default</string>
    <string name="temp600">default</string>
    <string name="temp700">default</string>
    <string name="temp800">default</string>
    <string name="temp900">default</string>
    <string name="temp1000">default</string>
    <string name="temp1100">default</string>
    <string name="temp1200">default</string>
    <string name="temp1300">default</string>
    <string name="temp1400">default</string>
    <string name="temp1500">default</string>
    <string name="temp1600">default</string>
    <string name="temp1700">default</string>
    <string name="temp1800">default</string>
    <string name="temp1900">default</string>
    <string name="temp2000">default</string>
    <string name="temp2100">default</string>
    <string name="temp2200">default</string>
    <string name="temp2300">default</string>
    <string name="dailyMinVal">MIN:</string>
    <string name="dailyMaxVal">MAX:</string>
    <string name="dailyMinValue">0</string>
    <string name="dailyMaxValue">0</string>
    <string name="dailyTimeValue">default</string>
    <string name="dailyTimeLabel">DATE:</string>
    <string name="slideshowTitle">7-DAY FORECAST</string>


</resources>